--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "simplize-cli",
   "description": "The first cli",
-  "version": "1.0.0",
+  "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cevio/simplize-cli"
+  },
   "keywords": [
     "toolkit",
     "cli"
