--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simplize-cli",
-  "description": "The first cli",
-  "version": "0.0.9",
+  "description": "The simplize framework cli",
+  "version": "0.0.10",
   "repository": {
     "type": "git",
     "url": "https://github.com/cevio/simplize-cli"
