--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "simplize-cli",
   "description": "The simplize framework cli",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "repository": {
     "type": "git",
     "url": "https://github.com/cevio/simplize-cli"
@@ -24,6 +24,7 @@
     "cli-color": "^1.1.0",
     "cli-prompt": "^0.5.0",
     "commander": "^2.9.0",
+    "compression": "^1.6.1",
     "cssmin": "^0.4.3",
     "ejs": "^2.4.1",
     "es6-promise": "^3.1.2",
